kubernetes/overlays/prod/overlays/askem-production/ingress/private-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: terarium
  name: private-web-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: askem-prod-web-private
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:243706056861:certificate/b8ac3aba-1bf7-4ebe-815b-21657eaf6023
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: "data-service.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-service
                port:
                  number: 3020

    - host: "mit-proxy.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mit-proxy
                port:
                  number: 3981

    - host: "model-service.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: model-service
                port:
                  number: 3010

    - host: "simulation-service.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simulation-service
                port:
                  number: 3030

    - host: "skema-py.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skema-py
                port:
                  number: 4041

    - host: "skema-rs.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skema-rs
                port:
                  number: 4040

  tls:
    - hosts:
        - "data-service.terarium.ai"
        - "mit-proxy.terarium.ai"
        - "model-service.terarium.ai"
        - "simulation-service.terarium.ai"
        - "skema-py.staging.terarium.ai"
        - "skema-rs.staging.terarium.ai"
