kubernetes/overlays/prod/overlays/askem-production/ingress/private-web-non-ssl-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-web-non-ssl-ingress
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: askem-prod-web-private, askem-prod-k8s
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - host: 'beaker.terarium.ai'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beaker
                port:
                  number: 3050
  tls:
    - hosts:
        - 'beaker.terarium.ai'
