kubernetes/overlays/prod/overlays/askem-production/ingress/public-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-web-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: askem-prod-web
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: "gateway-httpd.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-httpd
                port:
                  number: 8078

    - host: "app.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-httpd
                port:
                  number: 8078

    - host: "documentation.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: terarium-docs
                port:
                  number: 8000
  tls:
    - hosts:
        - "app.terarium.ai"
        - "gateway-httpd.terarium.ai"
        - "documentation.terarium.ai"
